changed link colour and fixed shadow clipping

--- a/docs/main.css
+++ b/docs/main.css
@@ -24,10 +24,6 @@
   src: local("Segoe UI Semibold"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff2) format("woff2"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff) format("woff"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.ttf) format("truetype");
   font-weight: 700;
 }
-* {
-  overflow: hidden;
-}
-
 html {
   margin: 0;
   padding: 0;
@@ -78,7 +74,7 @@ nav {
   background-color: transparent;
 }
 nav h2 {
-  padding: 5px;
+  padding: 10px;
 }
 nav ul {
   margin-left: 0;
@@ -153,6 +149,9 @@ nav li :hover {
   img {
     width: 100%;
   }
+}
+a {
+  color: #51a6e5;
 }
 
 /*# sourceMappingURL=main.css.map */
